# CS505-Final-Project

./: .gitignore  README.md  model_workbook.ipynb  pyproject.toml  samplepage.html  timevdo_workbook_transcript.ipynb  workbook_transcript.ipynb
congress/: .gitattributes  create_api_keys.py  debate_transcripts.json  explore_transcript.py  govinfo.json  list_bills.py  scrapy.cfg  simple_filter.py
congress/congress/: items.py  middlewares.py  pipelines.py  settings.py
congress/congress/old_data/: daterangegovinfo.json  daterangegovinfo2.json  daterangegovinfo3.json
congress/congress/spiders/: govinfo.py
congress/crawls/02/: requests.seen  spider.state
data/: H117_rollcalls.csv  H118_rollcalls.csv
